test_cases/fail/f33.lxr
SCRIPT AREA
START SCRIPT
IF ('A')
START IF
    PRINT: "yes"
END IF
END SCRIPT
